Development with the Force.com Platform (3rd Edition)/src/objects/Skill__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional detail to back up the rating</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Proficiency of associated Contact in this skill</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0 - None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of skill (e.g., Java), non-empty value required</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUI Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Skill-{00000}</displayFormat>
        <label>Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Skill_type_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Type must contain a value</errorMessage>
    </validationRules>
</CustomObject>